--- a/css/style.scss
+++ b/css/style.scss
@@ -129,6 +129,7 @@ h3{
     text-decoration: underline;  
     background-color: rgb(78, 128, 172);  
     padding-top: 40px;
+    line-height: 1.5em;
 }   
 form{
     background-color: rgb(219, 233, 226);
@@ -203,13 +204,13 @@ input, textarea{
         @include fontStyle();
     }
 h2{
-    text-align: center;
+    text-align:center;
     color: var(--colorLetra);
-    background-color: rgb(78, 128, 172);
     margin-top: 15%;
     margin-bottom: 5%;
-    margin-left: 10%;
+    margin-left: 30%;
     font-size: 50px;
+    line-height: 1.5em;
     text-decoration: underline;
     font-family: var(--familiaLetra);
 }
@@ -249,7 +250,7 @@ table{
     text-align: center;
     border: black 1px;
     border-collapse: collapse;
-    margin-bottom: 20%;
+    
     color: var(--colorLetra);
     font-family: var(--familiaLetra);   
 }
@@ -324,6 +325,7 @@ h1{
     text-align: center;
     text-decoration: underline;
     font-size: 40px;
+    line-height: 1.5em;
 }
 
 main div .barraHome{
